// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initENV should fail with non-existing file 1`] = `
Object {
  "ENV": Object {
    "KEY_BASE_ENV": "test",
    "KEY_PROCESS_ENV": "test",
    "NODE_ENV": "development",
    "PWD": "/home/whoami/my-whook-project",
  },
  "logCalls": Array [
    Array [
      "debug",
      "♻️ - Loading the environment service.",
    ],
    Array [
      "warning",
      "🖥 - Using local env.",
    ],
    Array [
      "debug",
      "🚫 - Could not load \\".env.development\\" file.",
    ],
  ],
  "readFileCalls": Array [
    Array [
      "/home/whoami/my-whook-project/.env.development",
    ],
  ],
}
`;

exports[`initENV should work with existing file 1`] = `
Object {
  "ENV": Object {
    "DB_HOST": "localhost",
    "DB_PASSWORD": "oudelali",
    "KEY_BASE_ENV": "test",
    "KEY_PROCESS_ENV": "test",
    "NODE_ENV": "development",
    "PWD": "/home/whoami/my-whook-project",
  },
  "logCalls": Array [
    Array [
      "debug",
      "♻️ - Loading the environment service.",
    ],
    Array [
      "warning",
      "🖥 - Using local env.",
    ],
    Array [
      "warning",
      "💾 - Using .env file at \\"/home/whoami/my-whook-project/.env.development\\".",
    ],
  ],
  "readFileCalls": Array [
    Array [
      "/home/whoami/my-whook-project/.env.development",
    ],
  ],
}
`;
